Fixed scrollbar issue in embedded calendar iframe

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -96,7 +96,7 @@ $side-width: 25%;
 
 iframe {
     width: 100%;
-    height: 100%;
+    height: 98%;
 }
 
 #projects-container {
